<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/maakacctxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50sp"
        android:layout_marginTop="50sp"
        android:layout_marginEnd="50sp"
        android:layout_marginBottom="50sp"
        android:gravity="center"
        android:text="@string/maak_account_aan"
        android:textColor="@color/white"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/newuser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10sp"
        android:layout_marginTop="50sp"
        android:layout_marginEnd="10sp"
        android:layout_marginBottom="10sp"
        android:background="#50808080"
        android:drawableStart="@drawable/ic_baseline_person_outline_24"
        android:drawableEnd="@drawable/ic_baseline_casino_24"
        android:drawablePadding="20sp"
        android:hint="@string/gebruikersnaam"
        android:inputType="text"
        android:padding="20sp"
        android:textColor="#FFFFFF"
        android:textColorHint="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/maakacctxt" />

    <EditText
        android:id="@+id/newpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10sp"
        android:layout_marginTop="10sp"
        android:layout_marginEnd="10sp"
        android:layout_marginBottom="10sp"
        android:background="#50808080"
        android:drawableStart="@drawable/ic_baseline_key_24"
        android:drawableEnd="@drawable/ic_baseline_casino_24"
        android:drawablePadding="20sp"
        android:hint="@string/wachtwoord"
        android:inputType="textPassword"
        android:padding="20sp"
        android:textColor="#FFFFFF"
        android:textColorHint="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/newuser" />

    <EditText
        android:id="@+id/repeatPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10sp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="10sp"
        android:background="#50808080"
        android:drawableStart="@drawable/ic_baseline_key_24"
        android:drawableEnd="@drawable/ic_baseline_casino_24"
        android:drawablePadding="20sp"
        android:hint="@string/herhaal_wachtwoord"
        android:inputType="textPassword"
        android:padding="20sp"
        android:textColor="#FFFFFF"
        android:textColorHint="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newpassword" />

    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/repeatPassword"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/createacc_btn"
        android:layout_width="183dp"
        android:layout_height="44dp"
        android:layout_marginTop="10sp"
        android:layout_marginBottom="220dp"
        android:backgroundTint="@color/teal_700"
        android:text="@string/maak_account"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progress"
        app:layout_constraintVertical_bias="0.178" />

    <TextView
        android:id="@+id/hasacc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/heb_je_al_een_account_log_dan_in"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createacc_btn"
        app:layout_constraintVertical_bias="0.137" />
</androidx.constraintlayout.widget.ConstraintLayout>