<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50sp"
        android:layout_marginTop="60sp"
        android:layout_marginEnd="50sp"
        android:layout_marginBottom="50sp"
        android:gravity="center"
        android:text="@string/log_in"
        android:textColor="@color/white"
        android:textSize="50sp"
        android:textStyle="bold"
        android:shadowColor="@color/black"
        android:shadowRadius="3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10sp"
        android:layout_marginTop="75sp"
        android:layout_marginEnd="10sp"
        android:layout_marginBottom="10sp"
        android:background="#50808080"
        android:drawableStart="@drawable/ic_baseline_person_outline_24"
        android:drawableEnd="@drawable/ic_baseline_casino_24"
        android:drawablePadding="20sp"
        android:hint="@string/gebruikersnaam"
        android:inputType="text"
        android:padding="20sp"
        android:textColor="#FFFFFF"
        android:textColorHint="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10sp"
        android:layout_marginTop="25sp"
        android:layout_marginEnd="10sp"
        android:layout_marginBottom="10sp"
        android:background="#50808080"
        android:drawableStart="@drawable/ic_baseline_key_24"
        android:drawableEnd="@drawable/ic_baseline_remove_red_eye_24"
        android:drawablePadding="20sp"
        android:hint="@string/wachtwoord"
        android:inputType="textPassword"
        android:padding="20sp"
        android:textColor="#FFFFFF"
        android:textColorHint="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/user" />

    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/loginbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginTop="175sp"
        android:layout_marginEnd="160dp"
        android:layout_marginBottom="20sp"
        android:backgroundTint="#4CAF50"
        android:text="@string/log_in"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <TextView
        android:id="@+id/noacc"
        android:layout_width="195dp"
        android:layout_height="85dp"
        android:gravity="center"
        android:shadowColor="@color/black"
        android:shadowRadius="3"
        android:text="Geen account? Maak nu eentje aan!"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginbtn"
        app:layout_constraintVertical_bias="0.818" />
</androidx.constraintlayout.widget.ConstraintLayout>